[tool.poetry]
name = "test"
version = "0.1.0"
description = ""
authors = ["LucasSapient <lucas.polidori@sapient.bio>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.23.1"
pandas = "^1.4.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
